--- a/package.json
+++ b/package.json
@@ -1,39 +1,58 @@
 {
-  "name": "resize",
-  "private": true,
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "preinstall": "node scripts/preinstall",
-    "reinstall": "rm -rf node_modules && rm -rf */node_modules && rm -rf */**/node_modules && pnpm install",
-    "vue2": "pnpm use:vue2 && pnpm -F vue2 run dev",
-    "vue3": "pnpm use:vue3 && pnpm -F vue3 run dev",
-    "build": "pnpm use:vue3 && pnpm -F v-resize-observer run build",
-    "release": "pnpm build && rm -rf README.md && cp ./libs/README.md ./",
-    "use:vue2": "vue-demi-switch 2.7 vue",
-    "use:vue3": "vue-demi-switch 3 vue3"
+  "name": "vue3-v-resize",
+  "version": "0.0.6",
+  "description": "Vue 3 resize observer with debounce",
+  "keywords": [
+    "resize",
+    "directive",
+    "vue3",
+    "vue"
+  ],
+  "homepage": "https://github.com/maryasov/vue3-v-resize",
+  "bugs": {
+    "url": "https://github.com/maryasov/vue3-v-resize/issues"
   },
-  "keywords": [],
-  "author": "",
   "license": "MIT",
+  "author": "maryasov",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/vue3-v-resize.js",
+  "module": "./dist/vue3-v-resize.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/vue3-v-resize.mjs",
+      "require": "./dist/vue3-v-resize.umd.js"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/maryasov/vue3-v-resize.git"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "pub": "npm publish --access public"
+  },
+  "dependencies": {
+    "vue": "^3.4.3"
+  },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@types/lodash": "^4.14.194",
-    "@types/node": "^16.18.27",
-    "chalk": "^4.1.2",
-    "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8",
-    "rimraf": "^5.0.0",
-    "rollup": "^3.21.6",
-    "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "typescript": "^5.0.4",
-    "yorkie": "^2.0.0",
-    "vue-demi": "latest",
-    "vue": "^2.7.7",
-    "vue3": "npm:vue@3.3.4"
+    "@rollup/plugin-typescript": "^11.1.5",
+    "rollup-plugin-typescript-paths": "^1.5.0",
+    "@types/node": "^20.10.6",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vue/shared": "^3.4.3",
+    "typescript": "^5.3.3",
+    "tslib": "^2.6.2",
+    "vite": "^5.0.10",
+    "@vueuse/core": "^10.7.1",
+    "sass": "^1.69.6",
+    "vue-tsc": "^1.8.27"
+  },
+  "peerDependencies": {
+    "vue": ">=3.4.3"
   }
 }
